Added texture to triangle
added texture to triangle even though it is missing some coloring due to bgr8 decoding I suspect. Coloring would be correct if I return the image as rgb8 or even better rgb16 .

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 glium = "*"
 superluminal-perf = "*"
-
+image = "*"
 
 
 [profile.release]
@@ -30,3 +30,12 @@ path = "examples/clear-color/main.rs"
 [[example]]
 name = "hello-triangle"
 path = "examples/hello-triangle/main.rs"
+
+[[example]]
+name = "hello-traingle-translation"
+path = "examples/hello-traingle-translation/main.rs"
+
+
+[[example]]
+name ="hello-triangle-matrix"
+path = "examples/hello-triangle-matrix-translation/main.rs"
